--- a/src/main/webapp/view/home.xhtml
+++ b/src/main/webapp/view/home.xhtml
@@ -62,7 +62,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-black">
                         <div class="panel-heading">
-                            <h3 class="panel-title"><h:outputLabel value="#{msg['app.home.position.title']}"/></h3>
+                            <h3 class="panel-title"><i class="fa fa-fw fa-money"></i> <h:outputLabel value="#{msg['app.home.position.title']}"/></h3>
                         </div>
                         <div class="panel-body">
 		                    <div class="col-lg-4 text-center">
