--- a/src/main/webapp/view/result.xhtml
+++ b/src/main/webapp/view/result.xhtml
@@ -109,7 +109,7 @@
 				    <div class="panel-heading">
 				      <h4 class="panel-title">
 				        <a data-toggle="collapse" href="#collapseFilter" class="panel-title">
-				          <h:outputText value="#{msg['app.result.filter']}"/>
+				          <i class="fa fa-fw fa-filter"></i> <h:outputText value="#{msg['app.result.filter']}"/>
 				        </a>
 				      </h4>
 				    </div>
@@ -139,7 +139,7 @@
 				    <p:outputPanel id="resultDetail" deferred="true">
                         <div class="panel panel-info">
                             <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i><h:outputText value=" #{msg['app.result.detail']} #{resultView.selectedPortfolio.name}"/></h3>
+                                <h3 class="panel-title"><i class="fa fa-fw fa-line-chart"></i><h:outputText value=" #{msg['app.result.detail']} #{resultView.selectedPortfolio.name}"/></h3>
                             </div>
                             <div class="panel-body">
 								<p:dataTable id="itemTable" var="result" value="#{resultView.results}" emptyMessage="#{msg['pf.datatable.noresults']}">
