--- a/src/main/webapp/view/carteiras.xhtml
+++ b/src/main/webapp/view/carteiras.xhtml
@@ -145,7 +145,7 @@
 										<br/>
 										
 										<p:commandLink id="clSP"
-										 				actionListener="#{carteiraView.showEmptyPosition}" update=":form">
+										 				actionListener="#{carteiraView.selectCarteira}" update=":form">
 										 		<h:outputText value="#{(carteiraView.emptyPosition) ? msg['app.portfolio.btn.showAll'] : msg['app.portfolio.btn.hideAll']}" />
 										</p:commandLink>
                             		</div>
