--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,6 +1,1 @@
-.ui-widget {
-    font-size: 0.85em !important;
- }
-.ui-widget .ui-widget {
-    font-size: 0.85em !important;
- }
+.ui-widget {font-size: 0.85em !important;}
