--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,1 +1,14 @@
-.ui-widget {font-size: 0.85em !important;}
+.ui-widget {
+    font-family: sans-serif;
+    font-size: .9em !important;
+}
+.ui-widget .ui-widget {
+    font-size: 1em;
+}
+.ui-widget input,
+.ui-widget select,
+.ui-widget textarea,
+.ui-widget button {
+    font-family: 'Segoe UI', Arial, sans-serif;
+    font-size: 0.95em !important;
+}
