--- a/src/main/webapp/view/extrato.xhtml
+++ b/src/main/webapp/view/extrato.xhtml
@@ -102,9 +102,9 @@
                             <h3 class="panel-title"><i class="fa fa-fw fa-list-ol"></i> <h:outputLabel value="#{msg['app.statement.title']}"/></h3>
                         </div>
                         <div class="panel-body">
-                       	    <h:commandLink>
+                       	    <h:commandLink title="#{msg['app.label.export.xls']}">
 						        <i class="fa fa-fw fa-file-excel-o"></i>
-						        <p:dataExporter type="xls" target="eventsDT" fileName="extrato" pageOnly="false"/>
+						        <p:dataExporter type="xlsx" target="eventsDT" fileName="extrato" pageOnly="false"/>
 						    </h:commandLink>
 							<p:dataTable id="eventsDT" var="statement" value="#{statementView.statements}"
 								rows="10" paginator="true" emptyMessage="#{msg['pf.datatable.noresults']}"
