--- a/src/main/webapp/view/rendimentos.xhtml
+++ b/src/main/webapp/view/rendimentos.xhtml
@@ -51,6 +51,12 @@
                 </div>
                 <div class="col-lg-12">
 	                <p:toolbar>
+		                <f:facet name="left">
+                       	    <h:commandLink title="#{msg['app.label.export.xls']}">
+						        <i class="fa fa-fw fa-file-excel-o"></i>
+						        <p:dataExporter type="xlsx" target="itemTable" fileName="rendimentos" pageOnly="false"/>
+						    </h:commandLink>
+		                </f:facet>
 	                	<f:facet name="right">
 						    <p:commandLink id="reNewIncome" onclick="PF('addIncomeReDlg').show()" actionListener="#{incomeView.prepareIncome}"
 						    				update=":form:panelNewIncome">
@@ -59,124 +65,126 @@
 						    </p:commandLink>				                		
 	                	</f:facet>
 	                </p:toolbar>
-					<p:dataTable id="itemTable" var="income" value="#{incomeView.incomes}" emptyMessage="#{msg['pf.datatable.noresults']}"
-								 selectionMode="single" rowKey="#{income.stock}">
-					    <p:column headerText="#{msg['app.incomes.stock']}" sortBy="#{income.stock}" style="text-align:left" width="80">
-					        <h:outputText value="#{income.stock}" style="font-weight: bold;"/>
-					    </p:column>
-
-					    <p:column headerText="#{msg['app.incomes.avg24']}" style="text-align:center" width="80">
-					        <h:outputText value="#{income.avg24}">
-					        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
-					        </h:outputText>
-					    </p:column>
-					    <p:column headerText="#{msg['app.incomes.avg12']}" style="text-align:center" width="80">
-					        <h:outputText value="#{income.avg12}">
-					        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
-					        </h:outputText>
-					    </p:column>
-
-					    <p:column headerText="#{incomeView.incomeLabel.lbl12}" style="text-align:center" width="80">
-					        <h:outputText value="#{income.value12}">
-					        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
-					        </h:outputText>
-					    </p:column>
-					    <p:column headerText="#{incomeView.incomeLabel.lbl11}" style="text-align:center" width="80">
-					        <h:outputText value="#{income.value11}">
-					        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
-					        </h:outputText>
-					    </p:column>
-					    <p:column headerText="#{incomeView.incomeLabel.lbl10}" style="text-align:center" width="80">
-					        <h:outputText value="#{income.value10}">
-					        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
-					        </h:outputText>
-					    </p:column>
-					    <p:column headerText="#{incomeView.incomeLabel.lbl9}" style="text-align:center" width="80">
-					        <h:outputText value="#{income.value9}">
-					        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
-					        </h:outputText>
-					    </p:column>
-					    <p:column headerText="#{incomeView.incomeLabel.lbl8}" style="text-align:center" width="80">
-					        <h:outputText value="#{income.value8}">
-					        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
-					        </h:outputText>
-					    </p:column>
-					    <p:column headerText="#{incomeView.incomeLabel.lbl7}" style="text-align:center" width="80">
-					        <h:outputText value="#{income.value7}">
-					        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
-					        </h:outputText>
-					    </p:column>
-					    <p:column headerText="#{incomeView.incomeLabel.lbl6}" style="text-align:center" width="80">
-					        <h:outputText value="#{income.value6}">
-					        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
-					        </h:outputText>
-					    </p:column>
-					    <p:column headerText="#{incomeView.incomeLabel.lbl5}" style="text-align:center" width="80">
-					        <h:outputText value="#{income.value5}">
-					        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
-					        </h:outputText>
-					    </p:column>
-					    <p:column headerText="#{incomeView.incomeLabel.lbl4}" style="text-align:center" width="80">
-					        <h:outputText value="#{income.value4}">
-					        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
-					        </h:outputText>
-					    </p:column>
-					    <p:column headerText="#{incomeView.incomeLabel.lbl3}" style="text-align:center" width="80">
-					        <h:outputText value="#{income.value3}">
-					        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
-					        </h:outputText>
-					    </p:column>
-					    <p:column headerText="#{incomeView.incomeLabel.lbl2}" style="text-align:center" width="80">
-					        <h:outputText value="#{income.value2}">
-					        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
-					        </h:outputText>
-					    </p:column>
-					    <p:column headerText="#{incomeView.incomeLabel.lbl1}" style="text-align:center" width="80">
-					        <h:outputText value="#{income.value1}">
-					        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
-					        </h:outputText>
-					    </p:column>
-					    <p:column headerText="#{msg['app.incomes.lastQuote']}" style="text-align:center" width="80">
-					        <h:outputText value="#{income.lastQuote}">
-					        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
-					        </h:outputText>
-					    </p:column>
-					    <p:column headerText="#{msg['percentSymbol']}" sortBy="#{income.lastPercent}" style="text-align:right">
-					        <h:outputText value="#{income.lastPercent}">
-					        	<f:convertNumber type="percent" minFractionDigits="2"/>
-					        </h:outputText>
-					    </p:column>
-					</p:dataTable>
-			        <p:dialog widgetVar="addIncomeReDlg" modal="true" position="center" header="#{msg['app.incomes.income.header']}" width="530" showEffect="fade" hideEffect="fade" closeOnEscape="true">
-						<p:panel id="panelNewIncome">
-			                <h:panelGrid columns="2" cellspacing="5" rendered="#{not empty incomeView.incomeCompany}">		
-						        <p:outputLabel value="#{msg['app.portfolio.symbol']}:" for="incomeSymbol" />
-						        <p:autoComplete id="incomeSymbol" minQueryLength="3" value="#{incomeView.incomeCompany.stock}" 
-						        			 completeMethod="#{chartView.completeStock}" effect="fade" />
-
-		 						<p:outputLabel for="reIncomeDate" value="#{msg['app.incomes.incomeDate']}:" />
-		        				<p:calendar id="reIncomeDate" value="#{incomeView.incomeCompany.incomeDate}" pattern="dd/MM/yyyy" mask="true" />
-
-		 						<p:outputLabel for="reYearMonth" value="#{msg['app.incomes.yearMonth']}:" />
-		        				<p:calendar id="reYearMonth" value="#{incomeView.incomeCompany.yearMonthDate}" pattern="MM/yyyy" mask="true" />
-
-								<p:outputLabel value="#{msg['app.portfolio.income.value']}:" for="incomeValue" />
-								<pe:inputNumber id="incomeValue" value="#{incomeView.incomeCompany.value}"  symbol="#{msg['currencySymbol']} " decimalPlaces="12"/>
-		
-			                </h:panelGrid>
-
-			                <p:separator />
-			                <p:toolbar>
-			                	<f:facet name="left">
-			                		<p:commandButton value="#{msg['btn.cancel']}" onclick="PF('addIncomeReDlg').hide()" type="button"/>
-			                	</f:facet>
-			                	<f:facet name="right">
-			                		<p:commandButton value="#{msg['btn.add']}" actionListener="#{incomeView.addIncome}" update=":form"/>
-			                	</f:facet>
-			                </p:toolbar>
-						</p:panel>
-			        </p:dialog>
+	                <p:outputPanel>
+						<p:dataTable id="itemTable" var="income" value="#{incomeView.incomes}" emptyMessage="#{msg['pf.datatable.noresults']}"
+									 selectionMode="single" rowKey="#{income.stock}" >
+						    <p:column headerText="#{msg['app.incomes.stock']}" sortBy="#{income.stock}" style="text-align:left" width="80">
+						        <h:outputText value="#{income.stock}" style="font-weight: bold;"/>
+						    </p:column>
+	
+						    <p:column headerText="#{msg['app.incomes.avg24']}" style="text-align:center" width="80">
+						        <h:outputText value="#{income.avg24}">
+						        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
+						        </h:outputText>
+						    </p:column>
+						    <p:column headerText="#{msg['app.incomes.avg12']}" style="text-align:center" width="80">
+						        <h:outputText value="#{income.avg12}">
+						        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
+						        </h:outputText>
+						    </p:column>
+	
+						    <p:column headerText="#{incomeView.incomeLabel.lbl12}" style="text-align:center" width="80">
+						        <h:outputText value="#{income.value12}">
+						        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
+						        </h:outputText>
+						    </p:column>
+						    <p:column headerText="#{incomeView.incomeLabel.lbl11}" style="text-align:center" width="80">
+						        <h:outputText value="#{income.value11}">
+						        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
+						        </h:outputText>
+						    </p:column>
+						    <p:column headerText="#{incomeView.incomeLabel.lbl10}" style="text-align:center" width="80">
+						        <h:outputText value="#{income.value10}">
+						        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
+						        </h:outputText>
+						    </p:column>
+						    <p:column headerText="#{incomeView.incomeLabel.lbl9}" style="text-align:center" width="80">
+						        <h:outputText value="#{income.value9}">
+						        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
+						        </h:outputText>
+						    </p:column>
+						    <p:column headerText="#{incomeView.incomeLabel.lbl8}" style="text-align:center" width="80">
+						        <h:outputText value="#{income.value8}">
+						        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
+						        </h:outputText>
+						    </p:column>
+						    <p:column headerText="#{incomeView.incomeLabel.lbl7}" style="text-align:center" width="80">
+						        <h:outputText value="#{income.value7}">
+						        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
+						        </h:outputText>
+						    </p:column>
+						    <p:column headerText="#{incomeView.incomeLabel.lbl6}" style="text-align:center" width="80">
+						        <h:outputText value="#{income.value6}">
+						        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
+						        </h:outputText>
+						    </p:column>
+						    <p:column headerText="#{incomeView.incomeLabel.lbl5}" style="text-align:center" width="80">
+						        <h:outputText value="#{income.value5}">
+						        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
+						        </h:outputText>
+						    </p:column>
+						    <p:column headerText="#{incomeView.incomeLabel.lbl4}" style="text-align:center" width="80">
+						        <h:outputText value="#{income.value4}">
+						        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
+						        </h:outputText>
+						    </p:column>
+						    <p:column headerText="#{incomeView.incomeLabel.lbl3}" style="text-align:center" width="80">
+						        <h:outputText value="#{income.value3}">
+						        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
+						        </h:outputText>
+						    </p:column>
+						    <p:column headerText="#{incomeView.incomeLabel.lbl2}" style="text-align:center" width="80">
+						        <h:outputText value="#{income.value2}">
+						        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
+						        </h:outputText>
+						    </p:column>
+						    <p:column headerText="#{incomeView.incomeLabel.lbl1}" style="text-align:center" width="80">
+						        <h:outputText value="#{income.value1}">
+						        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
+						        </h:outputText>
+						    </p:column>
+						    <p:column headerText="#{msg['app.incomes.lastQuote']}" style="text-align:center" width="80">
+						        <h:outputText value="#{income.lastQuote}">
+						        	<f:convertNumber type="number" minFractionDigits="2" maxFractionDigits="6" locale="#{msg['locale']}"/>
+						        </h:outputText>
+						    </p:column>
+						    <p:column headerText="#{msg['percentSymbol']}" sortBy="#{income.lastPercent}" style="text-align:right" width="80">
+						        <h:outputText value="#{income.lastPercent}">
+						        	<f:convertNumber type="percent" minFractionDigits="2"/>
+						        </h:outputText>
+						    </p:column>
+						</p:dataTable>
+	                </p:outputPanel>
                 </div>
             </div>
+	        <p:dialog widgetVar="addIncomeReDlg" modal="true" position="center" header="#{msg['app.incomes.income.header']}" width="530" showEffect="fade" hideEffect="fade" closeOnEscape="true">
+				<p:panel id="panelNewIncome">
+	                <h:panelGrid columns="2" cellspacing="5" rendered="#{not empty incomeView.incomeCompany}">		
+				        <p:outputLabel value="#{msg['app.portfolio.symbol']}:" for="incomeSymbol" />
+				        <p:autoComplete id="incomeSymbol" minQueryLength="3" value="#{incomeView.incomeCompany.stock}" 
+				        			 completeMethod="#{chartView.completeStock}" effect="fade" />
+
+ 						<p:outputLabel for="reIncomeDate" value="#{msg['app.incomes.incomeDate']}:" />
+        				<p:calendar id="reIncomeDate" value="#{incomeView.incomeCompany.incomeDate}" pattern="dd/MM/yyyy" mask="true" />
+
+ 						<p:outputLabel for="reYearMonth" value="#{msg['app.incomes.yearMonth']}:" />
+        				<p:calendar id="reYearMonth" value="#{incomeView.incomeCompany.yearMonthDate}" pattern="MM/yyyy" mask="true" />
+
+						<p:outputLabel value="#{msg['app.portfolio.income.value']}:" for="incomeValue" />
+						<p:inputNumber id="incomeValue" value="#{incomeView.incomeCompany.value}"  symbol="#{msg['currencySymbol']} " decimalPlaces="12"/>
+
+	                </h:panelGrid>
+
+	                <p:separator />
+	                <p:toolbar>
+	                	<f:facet name="left">
+	                		<p:commandButton value="#{msg['btn.cancel']}" onclick="PF('addIncomeReDlg').hide()" type="button"/>
+	                	</f:facet>
+	                	<f:facet name="right">
+	                		<p:commandButton value="#{msg['btn.add']}" actionListener="#{incomeView.addIncome}" update=":form"/>
+	                	</f:facet>
+	                </p:toolbar>
+				</p:panel>
+	        </p:dialog>
     </ui:define>
 </ui:composition>
